kubernetes/apps/infra/authentik/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    kubernetes.io/metadata.name: infra
    app.kubernetes.io/name: authentik
    app.kubernetes.io/managed-by: kustomize
