kubernetes/apps/infra/authentik/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik
  namespace: infra
  annotations:
    external-dns.alpha.kubernetes.io/hostname: auth.smadja.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: traefik
  rules:
    - host: auth.smadja.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentik-server
                port:
                  number: 80
